# HIGGS

./: LICENSE  Makefile  README.md  collab-runner.ipynb  pyproject.toml  requirements.txt
experiments/higgs_mlp/: train.py
higgs/: data.py  logging.py  models.py  train.py
