[tool.poetry]
name = "higgs"
version = "0.1.0"
description = "Looking for a HIGGS in a haystack"
authors = ["Thom Pijnenburg"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7.9"
pandas = "^1.3.4"
ray = {extras = ["tune"], version = "^1.8.0"}
tqdm = "^4.62.3"
torch = "^1.10.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
